# app/Http/Resources/CicloResource.php
@@ -5,7 +5,7 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class EstudioResource extends JsonResource
+class CicloResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -15,9 +15,8 @@ class EstudioResource extends JsonResource
     public function toArray(Request $request): array
     {
         return [
-            'centro' => new CentroResource($this->centro),
-            'curso' => $this->curso,
-            'ciclo' => new CicloResource($this->ciclo),
+            'nombre' => $this->nombre,
+            'familia' => $this->familia->nombre
         ];
     }
 }
