# app/Models/Reto.php
@@ -10,13 +10,9 @@ use Illuminate\Database\Eloquent\Model;
  *     type="object",
  *     required={"id", "titulo", "texto"},
  *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="titulo", type="string", example="Desafío de programación"),
- *     @OA\Property(property="texto", type="string", example="Completa los ejercicios en el menor tiempo posible"),     
- *     @OA\Property(
- *      property="estudio",
- *      type="array",
- *      @OA\Items(ref="#/components/schemas/Estudio")
- *  )
+ *     @OA\Property(property="titulo", type="string", example="Merchandising de la Liga"),
+ *     @OA\Property(property="texto", type="string", example="Desde de la familia profesional de Textil, Confección y Piel el IES Besaya a través de su ciclo Profesional Básico en Tapicería y Cortinaje ha diseñado el RETO de Merchadising. Este RETO tiene la finalidad de diseñar y confeccionan productos de merchandising como chapas, llaveros, gorras con los logos de la Liga, centros participantes y diseños exclusivos para la venta y recaudación de fondos destinados a nuestra ONG. La venta se realizará en el propio reciento del evento durante los días 12 y 13 de marzo. Para ello se instalará una expositor tienda dentro del propio recinto."),
+ *     @OA\Property(property="estudio", type="object", ref="#/components/schemas/Estudio"),
  * )
  */
 class Reto extends Model
